Se crea el servicio get y se muestra en pantalla

--- a/src/app/home/candidato/candidato.component.html
+++ b/src/app/home/candidato/candidato.component.html
@@ -1,1 +1,4 @@
-<p>candidato works!</p>
+<p *ngFor="let item of candidatos">{{item.nombre}}</p>
+<p *ngFor="let item of candidatos">{{item.entrevista}}</p>
+<p *ngFor="let item of candidatos">{{item.tecnologiaJava}}</p>
+<p *ngFor="let item of candidatos">{{item.tecnologiaMicroservicios}}</p>
