--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin-left: 150px; margin-right: 150px ; margin-top: 50px;  font-family: Roboto, "Helvetica Neue", sans-serif; }
